[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/DisposableDroidBB_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/menu/textures/base.png" type="Texture" id=4]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 2 )

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 392.0
margin_top = 181.0
margin_right = 456.0
margin_bottom = 242.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="container" type="VBoxContainer" parent="."]
margin_left = 392.0
margin_top = 187.0
margin_right = 456.0
margin_bottom = 237.0

[node name="play_button" type="Button" parent="container"]
margin_right = 64.0
margin_bottom = 14.0
theme = SubResource( 2 )
text = "PLAY"
flat = true

[node name="continue_button" type="Button" parent="container"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0
theme = SubResource( 1 )
text = "CONTINUE"
flat = true

[node name="quit_button" type="Button" parent="container"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
theme = SubResource( 3 )
text = "QUIT"
flat = true

[connection signal="pressed" from="container/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="container/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="container/quit_button" to="." method="_on_quit_button_pressed"]
